--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="24412" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="24506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tyb-SJ-NdQ">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24405"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -83,20 +84,178 @@
                             <constraint firstAttribute="bottom" secondItem="zRy-np-aMF" secondAttribute="bottom" id="auh-Bo-AxZ"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="9hQ-xy-nGD"/>
+                    <navigationItem key="navigationItem" id="yug-Ya-UX5"/>
                     <connections>
                         <outlet property="tableView" destination="zRy-np-aMF" id="ob1-fa-blw"/>
+                        <segue destination="8UQ-7a-Lav" kind="presentation" identifier="ShowSingleImage" id="Ns9-9Y-CdE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139.69465648854961" y="130.98591549295776"/>
+            <point key="canvasLocation" x="1269.4656488549617" y="-289.43661971830988"/>
+        </scene>
+        <!--Single Image View Controller-->
+        <scene sceneID="sND-4q-657">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="8UQ-7a-Lav" customClass="SingleImageViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nPu-fb-CeC">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="6Is-04-Arb">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fly-XY-P34">
+                                <rect key="frame" x="8" y="67" width="48" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="2Rz-BL-BGM"/>
+                                    <constraint firstAttribute="width" constant="48" id="cq2-2Z-CfM"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="backward"/>
+                                <connections>
+                                    <action selector="didTapBackButton:" destination="8UQ-7a-Lav" eventType="touchUpInside" id="lqO-N8-OO1"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="JmZ-hC-Fhs"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <constraints>
+                            <constraint firstItem="Fly-XY-P34" firstAttribute="leading" secondItem="JmZ-hC-Fhs" secondAttribute="leading" constant="8" id="L9m-Bn-8SO"/>
+                            <constraint firstAttribute="trailing" secondItem="6Is-04-Arb" secondAttribute="trailing" id="Tcf-dg-XRr"/>
+                            <constraint firstAttribute="bottom" secondItem="6Is-04-Arb" secondAttribute="bottom" id="Z06-MY-eGm"/>
+                            <constraint firstItem="Fly-XY-P34" firstAttribute="top" secondItem="JmZ-hC-Fhs" secondAttribute="top" constant="8" id="fVe-wF-WNZ"/>
+                            <constraint firstItem="6Is-04-Arb" firstAttribute="top" secondItem="nPu-fb-CeC" secondAttribute="top" id="nTX-Zc-qcq"/>
+                            <constraint firstItem="6Is-04-Arb" firstAttribute="leading" secondItem="nPu-fb-CeC" secondAttribute="leading" id="pxy-iq-0Te"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="22e-Vk-cbC"/>
+                    <connections>
+                        <outlet property="imageView" destination="6Is-04-Arb" id="GhA-Yq-6d8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bed-le-HAA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2024" y="-289"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="iEz-dD-l2g">
+            <objects>
+                <tabBarController id="tyb-SJ-NdQ" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WlB-Cp-Hdc">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <color key="selectedImageTintColor" name="YP White"/>
+                        <tabBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" name="YP Black"/>
+                        </tabBarAppearance>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="I1N-No-gfB"/>
+                        <segue destination="zWf-cP-poE" kind="relationship" relationship="viewControllers" id="UXL-Ob-9lh"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wxM-KM-hZg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-547" y="46"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="JIO-HM-cfJ">
+            <objects>
+                <viewController id="zWf-cP-poE" userLabel="Profile" customClass="ProfileViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MYZ-xq-xKv">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="2FK-s9-9tA" userLabel="Avatar Image View">
+                                <rect key="frame" x="16" y="150" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="0G7-up-Mzi"/>
+                                    <constraint firstAttribute="width" secondItem="2FK-s9-9tA" secondAttribute="height" multiplier="1:1" id="7K3-1q-aty"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Екатерина Новикова" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IFN-Mh-D5c" userLabel="Name Label">
+                                <rect key="frame" x="16" y="206" width="382" height="28"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
+                                <color key="textColor" name="YP White"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ble-cu-2Tv" userLabel="Logout Button">
+                                <rect key="frame" x="333" y="163" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="aLS-Dj-err"/>
+                                    <constraint firstAttribute="height" constant="44" id="cZd-HL-BkE"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="logout_button"/>
+                                <connections>
+                                    <action selector="didTapLogoutButton:" destination="zWf-cP-poE" eventType="touchUpInside" id="gwl-GZ-1qQ"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="@ekaterina_nov" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oV9-dA-vuR" userLabel="Login Label">
+                                <rect key="frame" x="16" y="241.66666666666666" width="382" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" name="YP Gray"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Hello, World!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FIk-tp-IHj" userLabel="Description Label">
+                                <rect key="frame" x="16" y="265" width="382" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" name="YP White"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="kLP-g7-Hdw"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <constraints>
+                            <constraint firstItem="oV9-dA-vuR" firstAttribute="leading" secondItem="IFN-Mh-D5c" secondAttribute="leading" id="2uH-Hk-Uq7"/>
+                            <constraint firstItem="IFN-Mh-D5c" firstAttribute="top" secondItem="2FK-s9-9tA" secondAttribute="bottom" constant="8" id="6bJ-sZ-Ai4"/>
+                            <constraint firstItem="oV9-dA-vuR" firstAttribute="top" secondItem="IFN-Mh-D5c" secondAttribute="bottom" constant="8" id="FUq-JX-TbP"/>
+                            <constraint firstItem="FIk-tp-IHj" firstAttribute="top" secondItem="oV9-dA-vuR" secondAttribute="bottom" constant="8" id="G8c-Q3-eYU"/>
+                            <constraint firstItem="oV9-dA-vuR" firstAttribute="trailing" secondItem="IFN-Mh-D5c" secondAttribute="trailing" id="IaQ-ug-d3Y"/>
+                            <constraint firstItem="2FK-s9-9tA" firstAttribute="leading" secondItem="kLP-g7-Hdw" secondAttribute="leading" constant="16" id="MEa-al-3A0"/>
+                            <constraint firstItem="2FK-s9-9tA" firstAttribute="top" secondItem="kLP-g7-Hdw" secondAttribute="top" constant="32" id="NBo-GR-sqq"/>
+                            <constraint firstItem="ble-cu-2Tv" firstAttribute="centerY" secondItem="2FK-s9-9tA" secondAttribute="centerY" id="YsR-ML-PmK"/>
+                            <constraint firstItem="FIk-tp-IHj" firstAttribute="leading" secondItem="IFN-Mh-D5c" secondAttribute="leading" id="hYz-9d-UXa"/>
+                            <constraint firstItem="kLP-g7-Hdw" firstAttribute="trailing" secondItem="ble-cu-2Tv" secondAttribute="trailing" constant="16" id="iSY-0j-xel"/>
+                            <constraint firstItem="IFN-Mh-D5c" firstAttribute="leading" secondItem="2FK-s9-9tA" secondAttribute="leading" id="pfC-Wm-Uwq"/>
+                            <constraint firstItem="FIk-tp-IHj" firstAttribute="trailing" secondItem="IFN-Mh-D5c" secondAttribute="trailing" id="t5U-EM-Ocj"/>
+                            <constraint firstItem="kLP-g7-Hdw" firstAttribute="trailing" secondItem="IFN-Mh-D5c" secondAttribute="trailing" constant="16" id="vEh-YE-FM7"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="tab_profile_active" id="S4u-tZ-D2D"/>
+                    <connections>
+                        <outlet property="avatarImageView" destination="2FK-s9-9tA" id="py3-gd-5Tq"/>
+                        <outlet property="descriptionLabel" destination="FIk-tp-IHj" id="VJG-LK-wZ9"/>
+                        <outlet property="loginNameLabel" destination="oV9-dA-vuR" id="lza-e8-d8k"/>
+                        <outlet property="logoutButton" destination="ble-cu-2Tv" id="eJz-3B-26J"/>
+                        <outlet property="nameLabel" destination="IFN-Mh-D5c" id="cJs-zH-sc6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E1L-W0-6nx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="343" y="378"/>
         </scene>
     </scenes>
     <resources>
         <image name="0" width="1600" height="1059"/>
+        <image name="1" width="985" height="1280"/>
+        <image name="avatar" width="70" height="70"/>
+        <image name="backward" width="24" height="24"/>
         <image name="like_active" width="44" height="44"/>
+        <image name="logout_button" width="20" height="22"/>
+        <image name="tab_editorial_active" width="30" height="30"/>
+        <image name="tab_profile_active" width="30" height="30"/>
         <namedColor name="YP Black">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="YP Gray">
+            <color red="0.68235294117647061" green="0.68627450980392157" blue="0.70588235294117652" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="YP White">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
