--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -103,9 +103,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="6Is-04-Arb">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uO1-12-zCO">
+                                <rect key="frame" x="-20" y="0.0" width="433" height="865"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="6Is-04-Arb">
+                                        <rect key="frame" x="20" y="20" width="393" height="810"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <viewLayoutGuide key="contentLayoutGuide" id="Iz3-ki-17s"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="gyx-rS-zy2"/>
+                                <connections>
+                                    <outlet property="delegate" destination="8UQ-7a-Lav" id="0Sr-uB-HG1"/>
+                                </connections>
+                            </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fly-XY-P34">
                                 <rect key="frame" x="8" y="67" width="48" height="48"/>
                                 <constraints>
@@ -118,26 +129,41 @@
                                     <action selector="didTapBackButton:" destination="8UQ-7a-Lav" eventType="touchUpInside" id="lqO-N8-OO1"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QmD-Sh-GOQ">
+                                <rect key="frame" x="171.66666666666666" y="751" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="l9R-Se-DDx"/>
+                                    <constraint firstAttribute="width" constant="50" id="x2B-Gq-ses"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="sharing"/>
+                                <connections>
+                                    <action selector="didTapShareButton:" destination="8UQ-7a-Lav" eventType="touchUpInside" id="hoG-Gq-XFn"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="JmZ-hC-Fhs"/>
                         <color key="backgroundColor" name="YP Black"/>
                         <constraints>
+                            <constraint firstItem="JmZ-hC-Fhs" firstAttribute="bottom" secondItem="uO1-12-zCO" secondAttribute="bottom" id="6uz-Bf-JqT"/>
+                            <constraint firstItem="JmZ-hC-Fhs" firstAttribute="bottom" secondItem="QmD-Sh-GOQ" secondAttribute="bottom" constant="17" id="BPA-Ad-lCw"/>
                             <constraint firstItem="Fly-XY-P34" firstAttribute="leading" secondItem="JmZ-hC-Fhs" secondAttribute="leading" constant="8" id="L9m-Bn-8SO"/>
-                            <constraint firstAttribute="trailing" secondItem="6Is-04-Arb" secondAttribute="trailing" id="Tcf-dg-XRr"/>
-                            <constraint firstAttribute="bottom" secondItem="6Is-04-Arb" secondAttribute="bottom" id="Z06-MY-eGm"/>
+                            <constraint firstItem="uO1-12-zCO" firstAttribute="top" secondItem="JmZ-hC-Fhs" secondAttribute="top" id="Yot-iI-1wS"/>
+                            <constraint firstItem="uO1-12-zCO" firstAttribute="leading" secondItem="JmZ-hC-Fhs" secondAttribute="leading" id="e2p-EJ-wl6"/>
+                            <constraint firstItem="QmD-Sh-GOQ" firstAttribute="centerX" secondItem="JmZ-hC-Fhs" secondAttribute="centerX" id="f14-xH-xn5"/>
                             <constraint firstItem="Fly-XY-P34" firstAttribute="top" secondItem="JmZ-hC-Fhs" secondAttribute="top" constant="8" id="fVe-wF-WNZ"/>
-                            <constraint firstItem="6Is-04-Arb" firstAttribute="top" secondItem="nPu-fb-CeC" secondAttribute="top" id="nTX-Zc-qcq"/>
-                            <constraint firstItem="6Is-04-Arb" firstAttribute="leading" secondItem="nPu-fb-CeC" secondAttribute="leading" id="pxy-iq-0Te"/>
+                            <constraint firstItem="JmZ-hC-Fhs" firstAttribute="trailing" secondItem="uO1-12-zCO" secondAttribute="trailing" id="x08-ln-ohC"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="22e-Vk-cbC"/>
                     <connections>
                         <outlet property="imageView" destination="6Is-04-Arb" id="GhA-Yq-6d8"/>
+                        <outlet property="scrollView" destination="uO1-12-zCO" id="EYw-E9-dtN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bed-le-HAA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2024" y="-289"/>
+            <point key="canvasLocation" x="2023.6641221374045" y="-289.43661971830988"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="iEz-dD-l2g">
@@ -246,6 +272,7 @@
         <image name="backward" width="24" height="24"/>
         <image name="like_active" width="44" height="44"/>
         <image name="logout_button" width="20" height="22"/>
+        <image name="sharing" width="30" height="30"/>
         <image name="tab_editorial_active" width="30" height="30"/>
         <image name="tab_profile_active" width="30" height="30"/>
         <namedColor name="YP Black">
