task sprint 9 edited

--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -104,10 +104,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uO1-12-zCO">
-                                <rect key="frame" x="-20" y="0.0" width="433" height="865"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="6Is-04-Arb">
-                                        <rect key="frame" x="20" y="20" width="393" height="810"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="882"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                 </subviews>
@@ -145,14 +145,14 @@
                         <viewLayoutGuide key="safeArea" id="JmZ-hC-Fhs"/>
                         <color key="backgroundColor" name="YP Black"/>
                         <constraints>
-                            <constraint firstItem="JmZ-hC-Fhs" firstAttribute="bottom" secondItem="uO1-12-zCO" secondAttribute="bottom" id="6uz-Bf-JqT"/>
+                            <constraint firstItem="uO1-12-zCO" firstAttribute="bottom" secondItem="nPu-fb-CeC" secondAttribute="bottom" id="6uz-Bf-JqT"/>
                             <constraint firstItem="JmZ-hC-Fhs" firstAttribute="bottom" secondItem="QmD-Sh-GOQ" secondAttribute="bottom" constant="17" id="BPA-Ad-lCw"/>
                             <constraint firstItem="Fly-XY-P34" firstAttribute="leading" secondItem="JmZ-hC-Fhs" secondAttribute="leading" constant="8" id="L9m-Bn-8SO"/>
-                            <constraint firstItem="uO1-12-zCO" firstAttribute="top" secondItem="JmZ-hC-Fhs" secondAttribute="top" id="Yot-iI-1wS"/>
+                            <constraint firstItem="uO1-12-zCO" firstAttribute="top" secondItem="nPu-fb-CeC" secondAttribute="top" id="Yot-iI-1wS"/>
                             <constraint firstItem="uO1-12-zCO" firstAttribute="leading" secondItem="JmZ-hC-Fhs" secondAttribute="leading" id="e2p-EJ-wl6"/>
                             <constraint firstItem="QmD-Sh-GOQ" firstAttribute="centerX" secondItem="JmZ-hC-Fhs" secondAttribute="centerX" id="f14-xH-xn5"/>
                             <constraint firstItem="Fly-XY-P34" firstAttribute="top" secondItem="JmZ-hC-Fhs" secondAttribute="top" constant="8" id="fVe-wF-WNZ"/>
-                            <constraint firstItem="JmZ-hC-Fhs" firstAttribute="trailing" secondItem="uO1-12-zCO" secondAttribute="trailing" id="x08-ln-ohC"/>
+                            <constraint firstItem="uO1-12-zCO" firstAttribute="trailing" secondItem="JmZ-hC-Fhs" secondAttribute="trailing" id="x08-ln-ohC"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="22e-Vk-cbC"/>
@@ -209,7 +209,7 @@
         <image name="1" width="985" height="1280"/>
         <image name="backward" width="24" height="24"/>
         <image name="like_active" width="44" height="44"/>
-        <image name="sharing" width="30" height="30"/>
+        <image name="sharing" width="50" height="50"/>
         <image name="tab_editorial_active" width="30" height="30"/>
         <image name="tab_profile_active" width="30" height="30"/>
         <namedColor name="YP Black">
